<resources>
    <string name="app_name">EasyFix</string>
    <string name="app_message">Repara todo</string>

    <!-- Strings related to login and signup -->
    <string name="prompt_first_name">Nombres</string>
    <string name="prompt_last_name">Apellidos</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_phone">Número telefónico</string>
    <string name="prompt_sign_up">Crear nueva cuenta</string>
    <string name="prompt_log_in">Tengo una cuenta</string>
    <string name="prompt_recovery">Recordar contraseña</string>
    <string name="prompt_payment_method">Método de Pago</string>
    <string name="prompt_legacy">Al concluir con el registro usted declara que ha leído y acepta nuestras
        <a href="http://easyfix.ec/">condiciones de uso</a> y
        <a href="http://easyfix.ec/">política de privacidad</a>
    </string>

    <string name="action_sign_in">Ingresar</string>
    <string name="action_recovery_password">Solicitar</string>
    <string name="action_sign_up">Crear cuenta</string>

    <string name="error_invalid_first_name">El nombre es muy corto</string>
    <string name="error_invalid_last_name">El apellido es muy corto</string>
    <string name="error_incorrect_email">El correo electrónico no existe</string>
    <string name="error_invalid_email">El correo electrónico es inválido</string>
    <string name="error_confirmation_password">La contraseña no coincide</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_invalid_password">La contraseña debe tener más de 4 caracteres</string>
    <string name="error_invalid_phone">El número de teléfono es inválido</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="message_login_request">Iniciando Sesión...</string>
    <string name="message_logout_request">Cerrando Sesión...</string>
    <string name="message_recovery_password_request">Solicitando Contraseña...</string>
    <string name="message_signup_request">Enviando registro...</string>

    <string name="message_login_response_success">Se ha iniciado sesión correctamente</string>
    <string name="message_login_response_failed">Hubo problemas, revise los datos enviados o el correo ya se encuentre registrado</string>
    <string name="message_signup_response_success">Se ha registrado correctamente</string>

    <string name="message_logout_dialog">¿Estás seguro de cerrar sesión?</string>
    <string name="message_logout">Sesión cerrada correctamente</string>


    <!-- Service -->
    <string name="action_service_detail_now">Ahora</string>
    <string name="action_service_detail_schedule">Agendar</string>
    <string name="action_service_detail">Solicitar Técnico</string>
    <string name="message_service_detail_empty">No se encontro servicio, intente nuevamente en unos minutos</string>

    <string name="message_services_request">Consultando servicios...</string>


    <!-- Reservation -->
    <string name="reservation_message_create_request">Creando solicitud...</string>
    <string name="reservation_message_create_response">Se ha creado su solicitud correctamente</string>


    <!-- Notification -->
    <string name="notification_message_request">Consultando notificaciones...</string>


    <!-- Technical History -->
    <string name="technical_history_message_request">Consultando historial técnico...</string>


    <!-- Reservation -->
    <string name="reservation_message_cancel_dialog">¿Estás seguro de cancelar esta reservación?</string>
    <string name="reservation_message_call_dialog">¿Desea comunicarse con </string>
    <string name="reservation_message_delete_request">Cancelando reservación...</string>
    <string name="reservation_message_delete_response">Se ha cancelado su reservación correctamente</string>


    <!-- Dialog -->
    <string name="dialog_message_repeat">Repetir</string>
    <string name="dialog_message_continue">Continuar</string>
    <string name="dialog_message_yes">Aceptar</string>
    <string name="dialog_message_no">Cancelar</string>

    <string name="dialog_yes">Si</string>
    <string name="dialog_no">No</string>


    <!-- Network And Api -->
    <string name="message_network_local_failed">Hubo problemas, revise su conexión a internet e intente nuevamente en unos minutos</string>
    <string name="message_network_connectivity_failed">No hay conexión a internet</string>

    <string name="message_service_server_empty">No se encontraron registros</string>
    <string name="message_service_server_failed">Hubo problemas, intente nuevamente en unos minutos</string>


    <!-- Tab Menu -->
    <string name="tab_menu_service">Servicio</string>
    <string name="tab_menu_notifications">Notificaciones</string>
    <string name="tab_menu_account">Mi Cuenta</string>
    <string name="tab_menu_setting">Configuración</string>


    <!-- Settings -->
    <string name="setting_policies">Políticas de Privacidad</string>
    <string name="setting_terms">Términos y Condiciones</string>
    <string name="setting_help">Información de Ayuda</string>
    <string name="setting_about">Acerca De</string>
    <string name="setting_logout">Cerrar Sesión</string>


    <!-- Address -->
    <string name="address_message_footer">Agregar Dirección</string>
    <string name="address_message_update_dialog">¿Deseas cambiar tu ubicación predeterminada?</string>
    <string name="address_message_delete_dialog">¿Estás seguro de eliminar esta ubicación?</string>
    <string name="address_message_select_dialog">¿Estás seguro de seleccionar esta ubicación?</string>

    <string name="address_message_create_error">"No se puedo encontrar la dirección"</string>
    <string name="address_message_create_request">Agregando dirección...</string>
    <string name="address_message_create_response">Se ha agregado correctamente</string>

    <string name="address_message_update_request">Actualizando dirección...</string>
    <string name="address_message_update_response">Se ha actualizado correctamente</string>

    <string name="address_message_delete_request">Eliminando dirección...</string>
    <string name="address_message_delete_response">Se ha eliminado correctamente</string>


    <!-- Account -->
    <string name="acount_message_update_request">Actualizando perfil...</string>
    <string name="acount_message_update_response">Se ha actualizado correctamente</string>


    <!-- Map -->
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>


    <!-- Credentials -->
    <string name="google_map_api_key">AIzaSyBBZANwRnL2_-it7PIpqHAhk7G3FF4WggU</string>
    <string name="fabric_api_key">d995fea19637aa88211f84ec1ee41065c5af0a01</string>
    <string name="facebook_app_id">814537572068738</string>
    <string name="fb_login_protocol_scheme">fb814537572068738</string>

    <!-- Preferences -->
    <string name="preferences_user_id">USER_ID</string>
    <string name="preferences_user_first_name">USER_FIRST_NAME</string>
    <string name="preferences_user_last_name">USER_LAST_NAME</string>
    <string name="preferences_user_email">USER_EMAIL</string>
    <string name="preferences_profile_image">PROFILE_IMAGE</string>
    <string name="preferences_profile_phone">PROFILE_PHONE</string>
    <string name="preferences_profile_role">PROFILE_ROLE</string>
    <string name="preferences_profile_token">PROFILE_TOKEN</string>
    <string name="preferences_profile_address">PROFILE_ADDRESS</string>
    <string name="preferences_profile_payment_method">PROFILE_PAYMENT_METHOD</string>

    <string name="preferences_number_fragment">NUMBER_FRAGMENT</string>

    <string name="preferences_service_detail">SERVICE_DETAIL</string>

    <string name="preferences_reservation_id">RESERVATION_ID</string>
    <string name="preferences_reservation_detail">RESERVATION_DETAIL</string>
    <string name="preferences_reservation_schedule">RESERVATION_SCHEDULE</string>

    <string name="preferences_notification_provider">NOTIFICATION_PROVIDER</string>

    <string name="preferences_reservation_rating_id">RESERVATION_RATING_ID</string>
    <string name="preferences_provider_rating">PROVIDER_RATING</string>

    <array name="days_week">
        <item>D</item>
        <item>L</item>
        <item>M</item>
        <item>M</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
    </array>
    <string name="title_activity_about">AboutActivity</string>
</resources>
