<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly_activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scroll_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_signup"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <include layout="@layout/app_header_main" ></include>

            <EditText
                android:id="@+id/txt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:drawableStart="@android:drawable/ic_menu_camera"
                android:drawablePadding="10dp"
                android:inputType="textCapWords|textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black_35"
                android:hint="@string/prompt_first_name"
                android:ellipsize="start"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableStart="@android:drawable/ic_menu_camera"
                android:drawablePadding="10dp"
                android:inputType="textCapWords|textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black_35"
                android:hint="@string/prompt_last_name"
                android:ellipsize="start"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableStart="@android:drawable/ic_menu_camera"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black_35"
                android:hint="@string/prompt_email"
                android:ellipsize="start"
                android:maxLines="1" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableStart="@android:drawable/ic_menu_camera"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black_35"
                android:hint="@string/prompt_password"
                android:ellipsize="start"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/txt_phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:defaultNameCode="EC"
                    app:ccpLanguage="SPANISH"
                    app:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="10"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_above="@+id/txt_login"
        android:gravity="center"
        android:text="@string/action_sign_up"
        android:background="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:onClick="attemptSignUp"/>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/txt_legacy"
        android:gravity="center"
        android:text="@string/prompt_log_in"
        android:onClick="login"/>

    <TextView
        android:id="@+id/txt_legacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/prompt_legacy"/>

</RelativeLayout>