<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.easyfix.client.activities.LoginActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/app_header_main" ></include>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/auth_activity_extra_margin"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="@dimen/auth_activity_regular_margin"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/auth_activity_input"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/auth_activity_regular_margin"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/auth_activity_input"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prompt_sign_up"
                android:layout_marginTop="@dimen/auth_activity_extra_margin"
                android:onClick="signup"
                android:textSize="@dimen/auth_activity_action"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_activity_extra_margin"
                android:background="@color/colorPrimary"
                android:text="@string/action_sign_in"
                android:textSize="@dimen/auth_activity_action"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:onClick="attemptLogin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_activity_regular_margin"
                android:gravity="center"
                android:text="@string/prompt_recovery"
                android:textSize="@dimen/auth_activity_action"
                android:onClick="attemptRecovery"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.5"
                    android:background="@color/black_25"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="o"
                    android:textSize="20sp"
                    android:textColor="@color/black_25" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.5"
                    android:background="@color/black_25"/>

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/login_fb"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:onClick="attemptLoginFb"
                tools:ignore="MissingPrefix"
                fontPath="fonts/AntipastoRegular.ttf"
                app:fb_radius="3dp"
                app:fb_iconPosition="left"
                app:fb_fontIconSize="25sp"
                app:fb_iconPaddingRight="10dp"
                app:fb_textSize="14sp"
                app:fb_textFont="bold"
                app:fb_text="Login with Facebook"
                app:fb_textColor="#ffffff"
                app:fb_defaultColor="#5671a8"
                app:fb_focusColor="#6183d2"
                app:fb_fontIconResource="&#xf230;" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>