<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_min_margin"
    tools:context=".fragments.AccountFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_header_height"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_empty_profile" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/auth_activity_extra_margin"
                    android:paddingStart="@dimen/auth_activity_extra_margin"
                    android:paddingRight="@dimen/auth_activity_extra_margin"
                    android:paddingEnd="@dimen/auth_activity_extra_margin"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:textSize="@dimen/auth_activity_input"
                    android:hint="@string/prompt_first_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:text="Juan Alberto"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_min_margin">

                <EditText
                    android:id="@+id/txt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/auth_activity_extra_margin"
                    android:paddingStart="@dimen/auth_activity_extra_margin"
                    android:paddingRight="@dimen/auth_activity_extra_margin"
                    android:paddingEnd="@dimen/auth_activity_extra_margin"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:textSize="@dimen/auth_activity_input"
                    android:hint="@string/prompt_last_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:text="Bermudez Mendieta"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_min_margin">

                <EditText
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/auth_activity_extra_margin"
                    android:paddingStart="@dimen/auth_activity_extra_margin"
                    android:paddingRight="@dimen/auth_activity_extra_margin"
                    android:paddingEnd="@dimen/auth_activity_extra_margin"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:textSize="@dimen/auth_activity_input"
                    android:hint="@string/prompt_phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:text="+593 999999999"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_min_margin">

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/auth_activity_extra_margin"
                    android:paddingStart="@dimen/auth_activity_extra_margin"
                    android:paddingRight="@dimen/auth_activity_extra_margin"
                    android:paddingEnd="@dimen/auth_activity_extra_margin"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:textSize="@dimen/auth_activity_input"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:text="soporte@easyfix.com"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_min_margin">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/auth_activity_extra_margin"
                    android:paddingStart="@dimen/auth_activity_extra_margin"
                    android:paddingRight="@dimen/auth_activity_extra_margin"
                    android:paddingEnd="@dimen/auth_activity_extra_margin"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:textSize="@dimen/auth_activity_input"
                    android:hint="@string/prompt_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="***************"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_min_margin">

                <EditText
                    android:id="@+id/txt_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/auth_activity_extra_margin"
                    android:paddingStart="@dimen/auth_activity_extra_margin"
                    android:paddingRight="@dimen/auth_activity_extra_margin"
                    android:paddingEnd="@dimen/auth_activity_extra_margin"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:textSize="@dimen/auth_activity_input"
                    android:hint="@string/prompt_payment_method"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Efectivo"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>